<resources>
    <string name="app_name">风铃草</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="RPI_CPU">内存占用率</string>
    <string name="RPI_CPUC">CPU占用率</string>
    <string name="TEMP">室内温度/℃</string>
    <string name="HUM">室内湿度/%</string>
    <string name="NULL">NULL</string>
    <string name="start">开始通信</string>
    <string name="window">窗户开关</string>
    <string name="fans">风扇开关</string>
    <string name="ip">默认IP地址：192.168.3.34</string>
    <string name="port">默认端口：8080</string>
    <string name="definedip">使用自定义配置</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>