<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dd"
    android:backgroundTintMode="screen"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2DFDB"
        android:text="@string/RPI_CPU"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/mem_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F2F2"
        android:backgroundTint="#FFEBEE"
        android:max="100" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2DFDB"
        android:text="@string/RPI_CPUC"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/cpu_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F57F17"
        android:backgroundTint="#FFEBEE"
        android:max="100" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2DFDB"
        android:text="@string/HUM"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2DFDB"
        android:text="@string/TEMP"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NULL"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C1CBD7"
        android:backgroundTint="#29B6F6"
        android:text="@string/start"
        android:textColor="#090808"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/window_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:backgroundTint="#81D4FA"
        android:text="@string/window" />

    <Switch
        android:id="@+id/fans_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:backgroundTint="#81D4FA"
        android:text="@string/fans" />

    <AutoCompleteTextView
        android:id="@+id/ip_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:inputType="text"
        android:text="@string/ip"
        android:textAlignment="center"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/port_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:inputType="text"
        android:text="@string/port"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/default_defined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#81D4FA"
        android:text="@string/definedip" />

</LinearLayout>